[gd_scene load_steps=31 format=3 uid="uid://csqe6ncspknhp"]

[ext_resource type="Texture2D" uid="uid://boi7ryi7floye" path="res://Images/EnemyGun.png" id="1_4v8ta"]
[ext_resource type="Script" path="res://Scripts/shoot_farmer.gd" id="1_7smon"]
[ext_resource type="AudioStream" uid="uid://c5se3g5sqli8r" path="res://Sounds/Enemy SFX/Beak Bandit Gunshot A.wav" id="3_u2c3e"]
[ext_resource type="AudioStream" uid="uid://d2yfvtcv7mw2d" path="res://Sounds/Enemy SFX/Beak Bandit Man Grunt A.wav" id="4_ajxxo"]
[ext_resource type="AudioStream" uid="uid://oqk1fyt2gnd6" path="res://Sounds/Enemy SFX/Beak Bandit Man Mumble A.wav" id="5_7cva2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmtpf"]
size = Vector2(45, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_c8oce"]
radius = 387.466

[sub_resource type="CircleShape2D" id="CircleShape2D_4bo2u"]
radius = 533.034

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6p7"]
atlas = ExtResource("1_4v8ta")
region = Rect2(0, 28, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaiqi"]
atlas = ExtResource("1_4v8ta")
region = Rect2(32, 28, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_culke"]
atlas = ExtResource("1_4v8ta")
region = Rect2(64, 28, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jt7b"]
atlas = ExtResource("1_4v8ta")
region = Rect2(96, 28, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0wbf"]
atlas = ExtResource("1_4v8ta")
region = Rect2(0, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_831ni"]
atlas = ExtResource("1_4v8ta")
region = Rect2(32, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1yo3"]
atlas = ExtResource("1_4v8ta")
region = Rect2(64, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0nld"]
atlas = ExtResource("1_4v8ta")
region = Rect2(96, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1t3y"]
atlas = ExtResource("1_4v8ta")
region = Rect2(128, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhku0"]
atlas = ExtResource("1_4v8ta")
region = Rect2(160, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_uspy4"]
atlas = ExtResource("1_4v8ta")
region = Rect2(192, 59, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_xghcl"]
atlas = ExtResource("1_4v8ta")
region = Rect2(224, 59, 32, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_2x8qb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaiqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_culke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jt7b")
}],
"loop": false,
"name": &"reload",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0wbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_831ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1yo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0nld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1t3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhku0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uspy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xghcl")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c0dmu"]
atlas = ExtResource("1_4v8ta")
region = Rect2(0, 86, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_audno"]
atlas = ExtResource("1_4v8ta")
region = Rect2(32, 86, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynpib"]
atlas = ExtResource("1_4v8ta")
region = Rect2(64, 86, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xkj7"]
atlas = ExtResource("1_4v8ta")
region = Rect2(96, 86, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_neeht"]
atlas = ExtResource("1_4v8ta")
region = Rect2(0, 86, 32, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_am0uh"]
atlas = ExtResource("1_4v8ta")
region = Rect2(192, 0, 64, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5rls"]
atlas = ExtResource("1_4v8ta")
region = Rect2(128, 0, 64, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuw3s"]
atlas = ExtResource("1_4v8ta")
region = Rect2(192, 0, 64, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_mytoc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0dmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_audno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynpib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xkj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neeht")
}],
"loop": false,
"name": &"gun",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_am0uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5rls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuw3s")
}],
"loop": false,
"name": &"no_gun",
"speed": 5.0
}]

[node name="ShootFarmer" type="CharacterBody2D" groups=["HurtPlayer"]]
script = ExtResource("1_7smon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 12.5)
shape = SubResource("RectangleShape2D_gmtpf")

[node name="walk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walk"]
position = Vector2(0, -93)
shape = SubResource("CircleShape2D_c8oce")

[node name="shoot" type="Area2D" parent="."]
position = Vector2(-227, -183)

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot"]
position = Vector2(225, -102)
shape = SubResource("CircleShape2D_4bo2u")

[node name="SpriteFarmer" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_2x8qb")
animation = &"walking"
autoplay = "walking"

[node name="GunPivotPoint" type="Node2D" parent="."]
position = Vector2(0, 14.075)
scale = Vector2(3, 3)

[node name="SpriteGun" type="AnimatedSprite2D" parent="GunPivotPoint"]
position = Vector2(10, 3.975)
sprite_frames = SubResource("SpriteFrames_mytoc")
animation = &"gun"
frame = 4
frame_progress = 1.0

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u2c3e")
volume_db = -20.0

[node name="sound_grunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ajxxo")
volume_db = -20.0

[node name="sound_mumble" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7cva2")
volume_db = -20.0

[connection signal="body_entered" from="walk" to="." method="_on_walk_body_entered"]
[connection signal="body_exited" from="walk" to="." method="_on_walk_body_exited"]
[connection signal="body_entered" from="shoot" to="." method="_on_shoot_body_entered"]
[connection signal="body_exited" from="shoot" to="." method="_on_shoot_body_exited"]
